Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/SFDC_LOG__c.object-meta.xml
<CustomObject>
    <description>This will store messages from processes, flows and apex classes</description>
    <label>SFDC_LOG</label>
    <nameField>
        <displayFormat>LOG-{000000000}</displayFormat>
        <label>SFDC_LOG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC_LOG</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>