Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/fields/fxCreatedTime__c.field-meta.xml
<CustomField>
    <fullName>fxCreatedTime__c</fullName>
    <description>Display Date and Time down to seconds using Created Date</description>
    <formula>/*Use this formula on timestamp field to display as YYYY-MM-DD  HH:mm:ss */
                      TEXT(YEAR  (DATEVALUE(CreatedDate + ($User.UserTimezoneOffset__c/24) )))
&amp; &quot;-&quot; &amp;  RIGHT(&quot;00&quot; &amp; TEXT(MONTH (DATEVALUE(CreatedDate + ($User.UserTimezoneOffset__c/24) ))),2)
&amp; &quot;-&quot; &amp;  RIGHT(&quot;00&quot; &amp; TEXT(DAY   (DATEVALUE(CreatedDate + ($User.UserTimezoneOffset__c/24) ))),2)
&amp; &quot;  &quot; &amp; RIGHT(&quot;00&quot; &amp; TEXT(HOUR  (TIMEVALUE(CreatedDate + ($User.UserTimezoneOffset__c/24) ))),2)
&amp; &quot;:&quot; &amp;  RIGHT(&quot;00&quot; &amp; TEXT(MINUTE(TIMEVALUE(CreatedDate + ($User.UserTimezoneOffset__c/24) ))),2)
&amp; &quot;:&quot; &amp;  RIGHT(&quot;00&quot; &amp; TEXT(SECOND(TIMEVALUE(CreatedDate + ($User.UserTimezoneOffset__c/24) ))),2)</formula>
    <inlineHelpText>Display Date and Time down to seconds using Created Date</inlineHelpText>
    <label>fxCreatedTime</label>
    <type>Text</type>
</CustomField>