Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <description>Used to decide if the SFDC LOg object record created are an Integration log type or Error/Exception log type</description>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error/Exception Log</fullName>
            </value>
            <value>
                <fullName>Integration Log</fullName>
            </value>
            <value>
                <fullName>CPQ Logs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>