Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The message from the automation (the left most 255 characters)</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>