Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/fields/Message_Long__c.field-meta.xml
<CustomField>
    <fullName>Message_Long__c</fullName>
    <description>If needed, a way to log long error messages)</description>
    <label>Message Long</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>