Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <description>the user name running this automation as</description>
    <label>Running User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>