Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <description>The Name of the automation that ran the log event</description>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>