Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>This is the type of automation that ran during the log event</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>L.FLOW</fullName>
            </value>
            <value>
                <fullName>P.FLOW</fullName>
            </value>
            <value>
                <fullName>W.FLOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>