Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/listViews/SFDC_LOG_All.listView-meta.xml
<ListView>
    <fullName>SFDC_LOG_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>fxCreatedTime__c</columns>
    <columns>Running_User__c</columns>
    <columns>Source_Name__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Source_Step__c</columns>
    <columns>Message__c</columns>
    <columns>Message_Long__c</columns>
    <filterScope>Everything</filterScope>
    <label>SFDC LOG (All)</label>
</ListView>