Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/listViews/SFDC_LOG_CPQ_Renewal.listView-meta.xml
<ListView>
    <fullName>SFDC_LOG_CPQ_Renewal</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>fxCreatedTime__c</columns>
    <columns>Running_User__c</columns>
    <columns>Source_Name__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Source_Step__c</columns>
    <columns>Message__c</columns>
    <columns>Message_Long__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Name__c</field>
        <operation>equals</operation>
        <value>CPQ Renewal</value>
    </filters>
    <label>SFDC LOG: CPQ Renewal</label>
</ListView>