Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/listViews/SFDC_LOG_Email_Throttle.listView-meta.xml
<ListView>
    <fullName>SFDC_LOG_Email_Throttle</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>fxCreatedTime__c</columns>
    <columns>Running_User__c</columns>
    <columns>Source_Name__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Source_Step__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:21</value>
    </filters>
    <filters>
        <field>Source_Name__c</field>
        <operation>contains</operation>
        <value>8660</value>
    </filters>
    <label>SFDC LOG: Email Throttle</label>
</ListView>