Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/listViews/SFDC_LOG_Price_Book_Entry_Investigate.listView-meta.xml
<ListView>
    <fullName>SFDC_LOG_Price_Book_Entry_Investigate</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source_Type__c</columns>
    <columns>Source_Name__c</columns>
    <columns>Source_Step__c</columns>
    <columns>Message__c</columns>
    <columns>Message_Long__c</columns>
    <columns>Running_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:10</value>
    </filters>
    <filters>
        <field>Source_Name__c</field>
        <operation>startsWith</operation>
        <value>L.FLOW_9701:,L.FLOW_9702:</value>
    </filters>
    <filters>
        <field>Message__c</field>
        <operation>contains</operation>
        <value>none</value>
    </filters>
    <label>SFDC LOG: Price Book Entry (Investigate)</label>
</ListView>