Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/listViews/SFDC_LOG_recently_created.listView-meta.xml
<ListView>
    <fullName>SFDC_LOG_recently_created</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source_Name__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Source_Step__c</columns>
    <columns>Message__c</columns>
    <columns>Message_Long__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <label>SFDC LOG (recently created)</label>
</ListView>