Perkin-UAT/force-app/main/default/objects/SFDC_LOG__c/listViews/SFDC_LOG_S_FLOW_5110_Quote_Pricing_Req.listView-meta.xml
<ListView>
    <fullName>SFDC_LOG_S_FLOW_5110_Quote_Pricing_Req</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>fxCreatedTime__c</columns>
    <columns>Running_User__c</columns>
    <columns>Source_Name__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Source_Step__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Name__c</field>
        <operation>contains</operation>
        <value>5110</value>
    </filters>
    <label>SFDC LOG: S.FLOW 5110: Quote Pricing Req</label>
</ListView>